--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ meiga = "^1.9.7"
 
 [tool.poetry.group.dev.dependencies]
 diagrams = "^0.23.4"
+ipykernel = "^6.29.4"
 
 [build-system]
 requires = ["poetry-core"]
