--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ aiormq = "^6.8.0"
 beanie = "^1.25.0"
 python-decouple = "^3.8"
 meiga = "^1.9.7"
+petisco = "^2.1.3"
 
 
 [tool.poetry.group.dev.dependencies]
