--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Lucas Lucyk <llucyk@grupospec.com>"]
 license = "MIT"
 readme = "README.md"
-packages = [{include = "accounts"}, {include = "beanie_crud"}]
+packages = [{include = "accounts"}, {include = "beanie_crud"}, {include = "petisco_sanic"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
