--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,9 @@ services:
     expose:
       - 5672
       - 15672
+    ports:
+      - 5672:5672
+      - 15672:15672
     networks:
       - tach
 
