--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ beanie = "^1.25.0"
 python-decouple = "^3.8"
 meiga = "^1.9.7"
 petisco = {extras = ["rabbitmq"], version = "^2.1.3"}
+anyio = "^4.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
