--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,17 @@
             "cwd": "${workspaceFolder}/accounts",
             "python": "${command:python.interpreterPath}",
             "justMyCode": false
+        },
+        {
+            "name": "Transactions",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/transactions/main.py",
+            "console": "integratedTerminal",
+            "envFile": "${workspaceFolder}/.env",
+            "cwd": "${workspaceFolder}/transactions",
+            "python": "${command:python.interpreterPath}",
+            "justMyCode": false
         }
     ]
 }
