--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ anyio = "^4.3.0"
 [tool.poetry.group.dev.dependencies]
 diagrams = "^0.23.4"
 ipykernel = "^6.29.4"
+pytest = "^8.1.1"
+sanic-testing = "^23.12.0"
+pytest-asyncio = "^0.23.6"
 
 [build-system]
 requires = ["poetry-core"]
