config and add account tests

--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@
 MONGO_INITDB_ROOT_USERNAME=root
 MONGO_INITDB_ROOT_PASSWORD=sup3r&s3cr3t
 
-
 # sanic app
 MONGO_URI="mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@localhost:27017"
+DB_NAME=tach
 
 # petisco
 RABBITMQ_USER=guest
