--- a/pytest.ini
+++ b/pytest.ini
@@ -3,10 +3,18 @@
 env =
     D:PETISCO_NOTIFIER_TYPE=not_implemented
     D:PETISCO_DOMAIN_EVENT_BUS_TYPE=not_implemented
+    D:PETISCO_COMMAND_BUS_TYPE=not_implemented
+    D:PETISCO_MESSAGE_CONFIGURER_TYPE=not_implemented
+    D:PETISCO_MESSAGE_CONSUMER_TYPE=not_implemented
     D:ACCOUNT_REPOSITORY_TYPE=default
     D:DB_NAME=test
     D:ORGANIZATION=test
     D:TRANSACTIONS_ORGANIZATION=test
+    D:TESTING=true
+    D:TESTING_END2END=true
+    D:MONGO_INITDB_ROOT_USERNAME=root
+    D:MONGO_INITDB_ROOT_PASSWORD=sup3r&s3cr3t
+    D:MONGO_URI="mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@localhost:27017"
 markers=unit
         integration
         acceptance
@@ -15,7 +23,7 @@ addopts=--ignore=tests/end2end
         --color=yes
         -v
         --durations=10
-python_files=test_*.py
+# python_files=test_*.py
 python_classes=Test*
 python_functions=test_* should_
 
