--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ ipykernel = "^6.29.4"
 pytest = "^8.1.1"
 sanic-testing = "^23.12.0"
 pytest-asyncio = "^0.23.6"
+pytest-env = "^1.1.3"
 
 [build-system]
 requires = ["poetry-core"]
